# libreofficecalcmcp

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/common/: errors.rs  fs.rs  json.rs  mod.rs
src/mcp/: dispatcher.rs  mod.rs  protocol.rs  server.rs
src/ods/: cell_address.rs  content_xml.rs  manifest.rs  mod.rs  ods_file.rs  ods_templates.rs  sheet_model.rs
src/ods/assets/: empty_calc.ods
src/ods/content_xml/: cell_edit.rs  merged_anchor.rs  mod.rs  table_blocks.rs  workbook_xml.rs
src/tools/: add_sheet.rs  create_ods.rs  delete_sheet.rs  duplicate_sheet.rs  get_cell_value.rs  get_sheet_content.rs  get_sheets.rs  mod.rs  rename_sheet.rs  set_cell_value.rs  set_range_values.rs  sheet_ref.rs
test/: mod.rs
test/blackbox/: mod.rs
test/blackbox/add_sheet/: add_sheet_integration_test.rs  mod.rs
test/blackbox/common/: mod.rs
test/blackbox/common_raw/: common_raw_integration_test.rs  mod.rs
test/blackbox/content_xml_raw/: content_xml_raw_integration_test.rs  mod.rs
test/blackbox/create_ods/: mod.rs  (+1 more)
test/common/: errors_test.rs  json_test.rs  mod.rs
test/mcp/: dispatcher_test.rs  mod.rs  server_stdio_test.rs
test/ods/: cell_address_test.rs  content_xml_test.rs  mod.rs
test/tools/: add_sheet_test.rs  create_ods_test.rs  duplicate_sheet_test.rs  get_cell_value_test.rs  get_sheet_content_test.rs  mod.rs  set_cell_value_test.rs  set_range_values_test.rs  sheet_ref_test.rs
test/unit/: add_sheet_test.rs  dispatcher_test.rs  fs_test.rs  get_sheet_content_test.rs  get_sheets_test.rs  json_test.rs  mod.rs  set_cell_value_test.rs  sheet_model_test.rs
(+42 files in other folders)
