[package]
name = "mcp-ods"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
xmltree = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3"
xmltree = "0.11"

[[test]]
name = "unit"
path = "test/mod.rs"

[[test]]
name = "blackbox"
path = "test/blackbox/mod.rs"
